// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<div
  className="Dropdown"
  data-test-id="cf-ui-dropdown"
  position="bottom-left"
>
  <Button
    buttonType="primary"
    disabled={false}
    indicateDropdown={false}
    isFullWidth={false}
    loading={false}
    onClick={[Function]}
    testId="cf-ui-button"
    type="button"
  >
    Toggle
  </Button>
</div>
`;

exports[`renders the component as open 1`] = `
<div
  className="Dropdown"
  data-test-id="cf-ui-dropdown"
  position="bottom-left"
>
  <Button
    buttonType="primary"
    disabled={false}
    indicateDropdown={false}
    isFullWidth={false}
    loading={false}
    onClick={[Function]}
    testId="cf-ui-button"
    type="button"
  >
    Toggle
  </Button>
  <DropdownContainer
    anchorDimensionsAndPositon={
      Object {
        "height": 0,
        "left": 0,
        "top": 0,
        "width": 0,
      }
    }
    dropdownAnchor={null}
    openSubmenu={[Function]}
    position="bottom-left"
    submenu={false}
    testId="cf-ui-dropdown-portal"
  >
    <DropdownList
      testId="cf-ui-dropdown-list"
    >
      <DropdownListItem
        isActive={false}
        isDisabled={false}
        isTitle={false}
        testId="cf-ui-dropdown-list-item"
      >
        entry
      </DropdownListItem>
    </DropdownList>
  </DropdownContainer>
</div>
`;

exports[`renders the component with a submenu 1`] = `
<div
  className="Dropdown"
  data-test-id="cf-ui-dropdown"
  position="bottom-left"
>
  <Button
    buttonType="primary"
    disabled={false}
    indicateDropdown={false}
    isFullWidth={false}
    loading={false}
    onClick={[Function]}
    testId="cf-ui-button"
    type="button"
  >
    Toggle
  </Button>
  <DropdownContainer
    anchorDimensionsAndPositon={
      Object {
        "height": 0,
        "left": 0,
        "top": 0,
        "width": 0,
      }
    }
    dropdownAnchor={null}
    openSubmenu={[Function]}
    position="bottom-left"
    submenu={false}
    testId="cf-ui-dropdown-portal"
  >
    <DropdownList
      testId="cf-ui-dropdown-list"
    >
      <DropdownListItem
        isActive={false}
        isDisabled={false}
        isTitle={false}
        testId="cf-ui-dropdown-list-item"
      >
        entry
      </DropdownListItem>
      <Dropdown
        isOpen={true}
        position="bottom-left"
        submenuToggleLabel="Submenu"
        testId="cf-ui-dropdown"
      >
        <DropdownListItem
          isActive={false}
          isDisabled={false}
          isTitle={false}
          testId="cf-ui-dropdown-list-item"
        >
          entry
        </DropdownListItem>
      </Dropdown>
      ,
    </DropdownList>
  </DropdownContainer>
</div>
`;

exports[`renders the component with an additional class name 1`] = `
<div
  className="Dropdown"
  data-test-id="cf-ui-dropdown"
  position="bottom-left"
>
  <Button
    buttonType="primary"
    disabled={false}
    indicateDropdown={false}
    isFullWidth={false}
    loading={false}
    onClick={[Function]}
    testId="cf-ui-button"
    type="button"
  >
    Toggle
  </Button>
</div>
`;
